# Almaany

./: .gitignore  CMakeLists.txt  almaany.db  almaanyapp.cpp  almaanyapp.h  almaanyapp.ui  main.cpp
